Fix select exclusive on safari and checkbox position

--- a/src/scss/common/components/_custom-forms.scss
+++ b/src/scss/common/components/_custom-forms.scss
@@ -66,7 +66,6 @@
 
   // Background-color and (when enabled) gradient
   &::before {
-    left: -.625rem;
     border: $custom-control-indicator-border-size solid $custom-control-indicator-border-color;
   }
 
